[package]
name = "saba"
version = "0.1.0"
edition = "2021"
description = "Saba Bandwidth Allocation Scheme"
repository = "https://github.com/mrkatebzadeh/saba-controller"
license = "MIT"

[[bin]]
name = "controller"
path = "src/controller/main.rs"

[[bin]]
name = "interface"
path = "src/interface/main.rs"


[dependencies]
toml = "0.7.0"
clap = { version = "4.1.4", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
tonic = { version = "0.8.3", features = ["tls"] }
prost = "0.11.6"
tokio = { version = "1.24.2", features = ["full"] }
log = "0.4.17"
simplelog = "0.12.0"
csv = "1.1"
kodama = "0.3.0"
itertools = "0.10.5"
local-ip-address = "0.5.3"


[build-dependencies]
tonic-build = "0.8.4"
