[workspace]
members = [
    "saba-core",
    "saba-controller",
    "saba-profiler",
    "saba-client",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Saba Application-Aware Bandwidth Allocation Scheme"
repository = "https://github.com/mrkatebzadeh/saba-controller"

[workspace.dependencies]
async-trait = "0.1"
toml = "0.7.0"
clap = { version = "4.1.4", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
tonic = { version = "0.8.3", features = ["tls"] }
prost = "0.11.6"
tokio = { version = "1.24.2", features = ["full"] }
log = "0.4.17"
simplelog = "0.12.0"
csv = "1.1"
kodama = "0.3.0"
itertools = "0.10.5"
local-ip-address = "0.5.3"
daemonize = "0.5.0"
rand = "0.6.5"
nalgebra = "0.32.3"
thiserror = "1"
tempfile = "3.10"
saba-core = { path = "saba-core" }
