[workspace]
members = [
    "saba-core",
    "saba-controller",
    "saba-profiler",
    "saba-client",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Saba Application-Aware Bandwidth Allocation Scheme"
repository = "https://github.com/mrkatebzadeh/saba-controller"

[workspace.dependencies]
async-trait = "0.1.89"
toml = "0.9.11"
clap = { version = "4.5.57", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tonic = { version = "0.14.3", features = ["tls-native-roots"] }
tonic-prost = "0.14.3"
prost = "0.14.3"
tokio = { version = "1.49.0", features = ["full"] }
log = "0.4.29"
simplelog = "0.12.2"
csv = "1.4.0"
kodama = "0.3.0"
itertools = "0.14.0"
local-ip-address = "0.6.10"
daemonize = "0.5.0"
nalgebra = "0.34.1"
thiserror = "2.0.18"
tempfile = "3.25.0"
saba-core = { path = "saba-core" }
