[package]
name = "saba-controller"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Controller daemon for the Saba bandwidth allocation scheme"

[dependencies]
saba-core.workspace = true
tokio.workspace = true
tonic.workspace = true
simplelog.workspace = true
log.workspace = true
daemonize.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
clap.workspace = true

[dev-dependencies]
tempfile.workspace = true
