[package]
name = "saba-profiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Saba offline profiler"

[dependencies]
saba-core.workspace = true
csv.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
toml.workspace = true
simplelog.workspace = true
log.workspace = true

[dev-dependencies]
tempfile.workspace = true
